backend do banco de curriculos ok
