# back-end/src/controller/CandidatoController.js
@@ -3,8 +3,9 @@ const status = require('http-status-codes');
 
 const create = async (req, res) => {
     try {
-        const candidatoObjeto = req.body;    
-        res.status(status.CREATED).send(candidatoService.create(candidatoObjeto));        
+        const candidatoObjeto = req.body;
+        await candidatoService.create(candidatoObjeto) 
+        res.status(status.CREATED).send({ message: "Candidato cadastrado com sucesso!"});        
     } catch (error) {
         res.status(status.INTERNAL_SERVER_ERROR);
     }
@@ -13,6 +14,7 @@ const create = async (req, res) => {
 const getByCpf = async (req, res) => {
     try {
         const { cpf } = req.params;
+        console.log(cpf)
         const candidato = await candidatoService.getByCpf(cpf);
         res.status(status.OK).json(candidato);        
     } catch (error) {
