# back-end/src/model/Candidato.js
@@ -1,10 +1,10 @@
 const conn = require('../config/connect');
 
-const getByCpf = async (cpf) => {  
+const getByCpf = async (cpf) => {
     const [[candidato]] = await conn.execute(
-      'SELECT * FROM candidatos WHERE candidatos.cpf = ?;', [cpf],
+      'SELECT * FROM candidatos WHERE cpf = ?;', [cpf],
     );
-    console.log(candidato) 
+
     return candidato;
   };
 
@@ -18,13 +18,15 @@ const getByCpf = async (cpf) => {
   const create = async (
     nome, cpf, cargo, email, dataNasc, civil, sexo, cep, endereco, bairro, 
     cidade, tel_fixo1, tel_fixo2, celular, contato, identidade, possui_veiculo, habilitacao
-    ) => conn.execute(
-    `INSERT INTO candidatos (nome, cpf, cargo, email, dataNasc, civil, sexo, cep, endereco, bairro, 
-      logradouro, numero, cidade, tel_fixo1, tel_fixo2, celular, contato, identidade, possui_veiculo, habilitacao) 
-    VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)`, 
-    [nome, cpf, cargo, email, dataNasc, civil, sexo, cep, endereco, bairro, 
-      logradouro, numero, cidade, tel_fixo1, tel_fixo2, celular, contato, identidade, possui_veiculo, habilitacao],
-  );
+    ) => {
+      await conn.execute(
+        `INSERT INTO candidatos (nome, cpf, cargo, email, data_nasc, civil, sexo, cep, endereco, bairro, 
+          cidade, tel_fixo1, tel_fixo2, celular, contato, identidade, possui_veiculo, habilitacao) 
+         VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)`, 
+        [nome, cpf, cargo, email, dataNasc, civil, sexo, cep, endereco, bairro, 
+          cidade, tel_fixo1, tel_fixo2, celular, contato, identidade, possui_veiculo, habilitacao]
+      );
+    }
   
   module.exports = { 
     getByCpf,
